fix: remove FILES/MESSAGES sections from HTML, change insertions label to lines

--- a/index.html
+++ b/index.html
@@ -600,13 +600,9 @@
     </div>
     <div class="stats">
       <div><span class="stat-val" id="detail-commits">0</span>commits</div>
-      <div><span class="stat-val" id="detail-ins">0</span>insertions</div>
+      <div><span class="stat-val" id="detail-ins">0</span>lines</div>
       <div><span class="stat-val" id="detail-dels">0</span>deletions</div>
     </div>
-    <h3>files</h3>
-    <ul class="file-list" id="detail-files"></ul>
-    <h3>messages</h3>
-    <ul class="msg-list" id="detail-messages"></ul>
     <div class="log-content" id="detail-log-content"></div>
   </div>
 
