--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       height: 100%;
     }
     #devlog-gallery-header {
-      position: absolute;
+      position: fixed;
       top: 20px;
       left: 24px;
       z-index: 20;
@@ -354,6 +354,68 @@
       font-size: 0.65rem;
       color: rgba(180, 200, 230, 0.35);
       margin-top: 4px;
+    }
+
+    /* Show Lessボタン */
+    .btn-show-less {
+      margin-top: 12px;
+      pointer-events: auto;
+      background: rgba(100, 150, 255, 0.1);
+      border: 1px solid rgba(100, 150, 255, 0.2);
+      color: rgba(180, 200, 230, 0.5);
+      font-family: 'Georgia', serif;
+      font-size: clamp(0.45rem, 2.0vmin, 0.65rem);
+      letter-spacing: 0.08em;
+      padding: 6px 12px;
+      cursor: pointer;
+      border-radius: 2px;
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+    .btn-show-less:hover {
+      background: rgba(100, 150, 255, 0.2);
+      color: rgba(220, 230, 245, 0.7);
+    }
+    .btn-show-less:focus {
+      outline: 2px solid rgba(100, 150, 255, 0.8);
+      outline-offset: 4px;
+    }
+
+    /* Read Moreボタン */
+    .btn-read-more {
+      background: rgba(100, 150, 255, 0.1);
+      border: 1px solid rgba(100, 150, 255, 0.2);
+      color: rgba(180, 200, 230, 0.5);
+      font-family: 'Georgia', serif;
+      font-size: clamp(0.5rem, 2.2vmin, 0.7rem);
+      letter-spacing: 0.1em;
+      padding: 10px 24px;
+      cursor: pointer;
+      border-radius: 2px;
+      transition: background 0.3s ease, color 0.3s ease;
+    }
+    .btn-read-more:hover {
+      background: rgba(100, 150, 255, 0.2);
+      color: rgba(220, 230, 245, 0.7);
+    }
+    .btn-read-more:focus {
+      outline: 2px solid rgba(100, 150, 255, 0.8);
+      outline-offset: 4px;
+    }
+
+    /* 展開可能カード（初期状態） */
+    .devlog-card.expandable {
+      max-height: 0;
+      opacity: 0;
+      transform: translateX(100%);
+      overflow: hidden;
+      transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+                  opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+                  transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .devlog-card.expandable.expanded {
+      max-height: 800px;
+      opacity: 1;
+      transform: translateX(0);
     }
 
     /* --- 浮上ボタン --- */
