--- a/index.html
+++ b/index.html
@@ -402,20 +402,16 @@
       outline-offset: 4px;
     }
 
-    /* 展開可能カード（初期状態） */
+    /* 展開可能カード（初期状態）— シンプルなフェード + 高さ展開 */
     .devlog-card.expandable {
       max-height: 0;
       opacity: 0;
-      transform: translateX(100%);
       overflow: hidden;
-      transition: max-height 0.4s cubic-bezier(0.4, 0, 0.2, 1),
-                  opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1),
-                  transform 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      transition: max-height 0.4s ease, opacity 0.3s ease;
     }
     .devlog-card.expandable.expanded {
       max-height: 800px;
       opacity: 1;
-      transform: translateX(0);
     }
 
     /* --- 浮上ボタン --- */
