--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>欠損駆動思考 - Kesson Space</title>
   <link rel="icon" href="./favicon.ico">
 
-  <!-- Bootstrap CSS (for devlog offcanvas + lightbox) -->
+  <!-- Bootstrap CSS (for collapse + lightbox) -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- PERF: CDN TLS接続を先行確立 -->
@@ -383,23 +383,11 @@
       outline-offset: 4px;
     }
 
-    /* Offcanvas内カードスタイル */
-    #offcanvas-gallery .card {
-      background: rgba(20, 25, 40, 0.9);
-      border: 1px solid rgba(100, 150, 255, 0.1);
-      cursor: pointer;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-    #offcanvas-gallery .card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 12px rgba(100, 150, 255, 0.15);
-    }
-
-    /* 無限スクロールローディング */
-    #offcanvas-loading {
-      text-align: center;
-      padding: 20px;
-      color: rgba(180, 200, 230, 0.5);
+    /* Devlog detail (accordion) */
+    .devlog-detail-card {
+      background: rgba(12, 16, 30, 0.9);
+      border: 1px solid rgba(100, 150, 255, 0.12);
+      box-shadow: 0 8px 24px rgba(10, 14, 26, 0.5);
     }
 
     /* --- 浮上ボタン --- */
@@ -431,7 +419,7 @@
     }
 
     /* ============================
-       Offcanvas 詳細ビュー
+       Devlog detail content
        ============================ */
     .session-content {
       color: #94a3b8;
@@ -476,9 +464,6 @@
     .session-content a {
       color: #f59e0b;
     }
-    .offcanvas-body::-webkit-scrollbar { width: 6px; }
-    .offcanvas-body::-webkit-scrollbar-track { background: transparent; }
-    .offcanvas-body::-webkit-scrollbar-thumb { background: #1e293b; border-radius: 3px; }
   </style>
   
   <script type="importmap">
@@ -573,43 +558,6 @@
       <div class="count" id="gallery-session-count"></div>
     </div>
   </section>
-
-  <!-- Bootstrap Offcanvas（右からスライドイン） -->
-  <div class="offcanvas offcanvas-end"
-       tabindex="-1"
-       id="devlogOffcanvas"
-       data-bs-backdrop="true"
-       style="width: 85%; background: rgba(10, 14, 26, 0.98);">
-    <div class="offcanvas-header border-bottom border-secondary">
-      <button type="button" class="btn btn-link text-light p-0 me-2 d-none"
-              id="offcanvas-back-btn" aria-label="一覧に戻る">
-        ←
-      </button>
-      <div>
-        <h5 class="text-light mb-0" style="letter-spacing: 0.15em;">DEVLOG</h5>
-        <small class="text-muted" id="offcanvas-session-count"></small>
-      </div>
-      <button type="button" class="btn-close btn-close-white"
-              data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body p-0">
-      <!-- 一覧ビュー -->
-      <div id="offcanvas-list-view">
-        <div id="offcanvas-gallery"></div>
-      </div>
-      <!-- 詳細ビュー（初期非表示） -->
-      <div id="offcanvas-detail-view" class="d-none">
-        <div class="p-3">
-          <div id="detail-cover" class="mb-3">
-            <img id="detail-cover-img" class="img-fluid rounded" style="cursor: pointer;" alt="Session cover">
-          </div>
-          <h5 id="detail-title" class="text-light mb-1"></h5>
-          <small id="detail-date" class="text-muted d-block mb-3"></small>
-          <div id="detail-content" class="session-content"></div>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Image Lightbox Modal -->
   <div class="modal fade" id="imageLightboxModal" tabindex="-1" aria-hidden="true">
