--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <title>欠損駆動思考 - Kesson Space</title>
   <link rel="icon" href="./favicon.ico">
 
-  <!-- Bootstrap CSS (for collapse + lightbox) -->
+  <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- PERF: CDN TLS接続を先行確立 -->
@@ -383,13 +383,6 @@
       outline-offset: 4px;
     }
 
-    /* Devlog detail (accordion) */
-    .devlog-detail-card {
-      background: rgba(12, 16, 30, 0.9);
-      border: 1px solid rgba(100, 150, 255, 0.12);
-      box-shadow: 0 8px 24px rgba(10, 14, 26, 0.5);
-    }
-
     /* --- 浮上ボタン --- */
     #surface-btn {
       position: fixed;
@@ -418,52 +411,6 @@
       outline-offset: 4px;
     }
 
-    /* ============================
-       Devlog detail content
-       ============================ */
-    .session-content {
-      color: #94a3b8;
-      font-family: 'SF Mono', 'Fira Code', 'Consolas', monospace;
-    }
-    .session-content h1,
-    .session-content h2,
-    .session-content h3 {
-      color: #e2e8f0;
-      margin-top: 1.5em;
-      margin-bottom: 0.5em;
-    }
-    .session-content h1 { font-size: 1.3rem; }
-    .session-content h2 { font-size: 1.1rem; }
-    .session-content h3 { font-size: 0.95rem; }
-    .session-content p {
-      font-size: 0.85rem;
-      line-height: 1.8;
-      color: #94a3b8;
-      margin-bottom: 1em;
-      font-family: "Noto Serif JP", "Yu Mincho", serif;
-    }
-    .session-content ul,
-    .session-content ol {
-      font-size: 0.85rem;
-      line-height: 1.8;
-      color: #94a3b8;
-      padding-left: 1.5em;
-    }
-    .session-content code {
-      background: rgba(100, 150, 255, 0.1);
-      padding: 0.15em 0.4em;
-      border-radius: 3px;
-      font-size: 0.8em;
-    }
-    .session-content pre {
-      background: rgba(0, 0, 0, 0.3);
-      padding: 1em;
-      border-radius: 4px;
-      overflow-x: auto;
-    }
-    .session-content a {
-      color: #f59e0b;
-    }
   </style>
   
   <script type="importmap">
@@ -558,17 +505,6 @@
       <div class="count" id="gallery-session-count"></div>
     </div>
   </section>
-
-  <!-- Image Lightbox Modal -->
-  <div class="modal fade" id="imageLightboxModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-xl">
-      <div class="modal-content bg-transparent border-0">
-        <div class="modal-body p-0 text-center">
-          <img id="lightbox-image" class="img-fluid" style="max-height: 80vh; cursor: pointer;" alt="Enlarged cover">
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- CHANGED: aria-label 追加 -->
   <button id="surface-btn" aria-label="ページ上部に戻る">↑ surface</button>
