--- a/devlog.html
+++ b/devlog.html
@@ -32,7 +32,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      z-index: 0;
       pointer-events: none;
     }
 
@@ -141,8 +141,8 @@
 
     /* prefers-reduced-motion対応 */
     @media (prefers-reduced-motion: reduce) {
-      #bg-container {
-        display: none;
+      #bg-container canvas {
+        animation: none !important;
       }
       #content-overlay {
         background: rgba(5, 5, 8, 1);
