--- a/devlog.html
+++ b/devlog.html
@@ -91,6 +91,18 @@
       color: rgba(220, 230, 245, 0.85);
       border-radius: 6px;
     }
+    .version-badge {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 9999;
+      background: rgba(255, 100, 100, 0.9);
+      color: white;
+      padding: 4px 10px;
+      font-size: 12px;
+      font-family: monospace;
+      border-radius: 3px;
+    }
 
     /* ============================
        Devlog detail content
@@ -161,6 +173,7 @@
   </script>
 </head>
 <body>
+  <div class="version-badge">v0.1.0-t045</div>
   <!-- Three.js背景 -->
   <div id="bg-container"></div>
 
