--- a/devlog.html
+++ b/devlog.html
@@ -45,9 +45,9 @@
       z-index: 1;
       background: linear-gradient(
         to bottom,
-        rgba(5, 5, 8, 0.7) 0%,
-        rgba(5, 5, 8, 0.85) 30%,
-        rgba(5, 5, 8, 0.9) 100%
+        rgba(5, 5, 8, 0.3) 0%,
+        rgba(5, 5, 8, 0.5) 30%,
+        rgba(5, 5, 8, 0.7) 100%
       );
       min-height: 100vh;
     }
@@ -176,7 +176,7 @@
   </script>
 </head>
 <body>
-  <div class="version-badge">v0.1.2-t045</div>
+  <div class="version-badge">v0.1.3-t045</div>
   <!-- Three.js背景 -->
   <div id="bg-container"></div>
 
@@ -246,9 +246,8 @@
         const res = await fetch(`./content/devlog/${id}.md`);
         if (!res.ok) return null;
         const raw = await res.text();
-        const match = raw.match(/^---\\s*[\\s\\S]*?---\\s*([\\s\\S]*)$/);
-        if (match) return match[1].trim();
-        return raw.replace(/^---\\s*[\\s\\S]*?---\\s*/, '').trim();
+        const content = raw.replace(/^---[\\s\\S]*?---\\n*/m, '').trim();
+        return content;
       } catch (e) {
         console.warn(`[devlog] Failed to load ${id}.md:`, e);
         return null;
