--- a/devlog.html
+++ b/devlog.html
@@ -176,7 +176,7 @@
   </script>
 </head>
 <body>
-  <div class="version-badge">v0.1.5-t045-debug</div>
+  <div class="version-badge">v0.1.6-t045</div>
   <!-- Three.js背景 -->
   <div id="bg-container"></div>
 
