--- a/devlog.html
+++ b/devlog.html
@@ -39,7 +39,12 @@
     #content-overlay {
       position: relative;
       z-index: 1;
-      background: transparent;
+      background: linear-gradient(
+        to bottom,
+        rgba(5, 5, 8, 0.3) 0%,
+        rgba(5, 5, 8, 0.5) 30%,
+        rgba(5, 5, 8, 0.7) 100%
+      );
       min-height: 100vh;
     }
 
@@ -167,7 +172,7 @@
   </script>
 </head>
 <body>
-  <div class="version-badge">v0.2.2-t045</div>
+  <div class="version-badge">v0.2.3</div>
   <!-- Three.js背景 -->
   <div id="bg-container"></div>
 
