fix(T-040-11): Remove articles padding + rename DEVLOG to TRACES
- Articles section: removed extra padding (3rem 1.5rem)
- Inline heading + fixed header: DEVLOG → TRACES
- Removed devlog-inline-count div and gallery-session-count div
- Removed #devlog-gallery-header .count CSS rule
- Cleaned up counterId references in devlog.js

--- a/index.html
+++ b/index.html
@@ -355,11 +355,6 @@
       margin: 0;
       font-family: 'SF Mono', 'Fira Code', 'Consolas', monospace;
     }
-    #devlog-gallery-header .count {
-      font-size: 0.65rem;
-      color: rgba(180, 200, 230, 0.35);
-      margin-top: 4px;
-    }
 
     /* Read Moreボタン */
     .btn-read-more {
@@ -579,17 +574,15 @@
 
   <!-- Devlog Gallery Section（テキストログ削除、すぐギャラリー） -->
   <section id="devlog-gallery-section">
-    <!-- CHANGED(2026-02-16): devlog見出し追加 -->
+    <!-- CHANGED(2026-02-16): TRACES見出し -->
     <div style="position:relative; z-index:20; padding:3rem 1.5rem 0;">
       <div class="container">
-        <h2 style="font-size:0.75rem; font-weight:400; color:rgba(180,200,230,0.5); letter-spacing:0.15em; text-transform:uppercase; font-family:'SF Mono','Fira Code','Consolas',monospace; margin:0;">DEVLOG</h2>
-        <div id="devlog-inline-count" style="font-size:0.65rem; color:rgba(180,200,230,0.35); margin-top:4px; margin-bottom:1rem;"></div>
+        <h2 style="font-size:0.75rem; font-weight:400; color:rgba(180,200,230,0.5); letter-spacing:0.15em; text-transform:uppercase; font-family:'SF Mono','Fira Code','Consolas',monospace; margin:0;">TRACES</h2>
       </div>
     </div>
     <div id="devlog-gallery-container"></div>
     <div id="devlog-gallery-header">
-      <h2>devlog</h2>
-      <div class="count" id="gallery-session-count"></div>
+      <h2>TRACES</h2>
     </div>
   </section>
 
@@ -661,7 +654,7 @@
   </div>
 
   <!-- Articles Section -->
-  <section id="articles-section" style="position:relative; z-index:5; padding:3rem 1.5rem;">
+  <section id="articles-section" style="position:relative; z-index:5;">
     <div class="container">
       <h2 style="font-size:0.75rem; font-weight:400; color:rgba(180,200,230,0.5); letter-spacing:0.15em; text-transform:uppercase; font-family:'SF Mono','Fira Code','Consolas',monospace; margin:0;">ARTICLES</h2>
       <div id="articles-count" style="font-size:0.65rem; color:rgba(180,200,230,0.35); margin-top:4px; margin-bottom:1rem;"></div>
