fix(T-040-12): セクション見出しDEVLOG/TRACES入れ替え

--- a/index.html
+++ b/index.html
@@ -578,12 +578,12 @@
     <!-- CHANGED(2026-02-16): TRACES見出し -->
     <div style="position:relative; z-index:20; padding:3rem 1.5rem 0;">
       <div class="container">
-        <h2 style="font-size:0.75rem; font-weight:400; color:rgba(180,200,230,0.5); letter-spacing:0.15em; text-transform:uppercase; font-family:'SF Mono','Fira Code','Consolas',monospace; margin:0;">TRACES</h2>
+        <h2 style="font-size:0.75rem; font-weight:400; color:rgba(180,200,230,0.5); letter-spacing:0.15em; text-transform:uppercase; font-family:'SF Mono','Fira Code','Consolas',monospace; margin:0;">DEVLOG</h2>
       </div>
     </div>
     <div id="devlog-gallery-container"></div>
     <div id="devlog-gallery-header">
-      <h2>DEVLOG</h2>
+      <h2>TRACES</h2>
     </div>
   </section>
 
