--- a/index.html
+++ b/index.html
@@ -332,11 +332,16 @@
       width: 100%;
     }
     #devlog-gallery-header {
-      position: sticky;
+      position: fixed;
       top: 20px;
       left: 24px;
       z-index: 20;
       pointer-events: none;
+      opacity: 0;
+      transition: opacity 0.4s ease;
+    }
+    #devlog-gallery-header.is-visible {
+      opacity: 1;
     }
     #devlog-gallery-header h2 {
       font-size: 0.75rem;
