fix(T-040-12): articles表示タイミング用スペーサー追加

--- a/index.html
+++ b/index.html
@@ -190,6 +190,13 @@
       z-index: 5;
       pointer-events: none;
     }
+    /* --- Articles出現タイミング用スペーサー --- */
+    #articles-spacer {
+      position: relative;
+      height: 80vh;
+      z-index: 5;
+      pointer-events: none;
+    }
 
     /* ============================
        スクロール案内 — 共通パターン
@@ -572,6 +579,8 @@
 
   <!-- 潜水スペーサー（カメラ下降のスクロール余白） -->
   <div id="hero-spacer"></div>
+  <!-- Articles出現タイミング調整スペーサー -->
+  <div id="articles-spacer"></div>
 
   <!-- Articles Section -->
   <section id="articles-section" style="position:relative; z-index:5;">
