fix(T-040-12): articles見出し周りの余白を統一

--- a/index.html
+++ b/index.html
@@ -584,10 +584,12 @@
 
   <!-- Articles Section -->
   <section id="articles-section" style="position:relative; z-index:5;">
-    <div class="container">
-      <h2 style="font-size:0.75rem; font-weight:400; color:rgba(180,200,230,0.5); letter-spacing:0.15em; text-transform:uppercase; font-family:'SF Mono','Fira Code','Consolas',monospace; margin:0;">ARTICLES</h2>
-      <div id="articles-error" class="d-none" style="color:#f87171; font-size:0.8rem;"></div>
-      <div id="articles-grid" class="row g-3"></div>
+    <div style="position:relative; z-index:20; padding:3rem 1.5rem 0;">
+      <div class="container">
+        <h2 style="font-size:0.75rem; font-weight:400; color:rgba(180,200,230,0.5); letter-spacing:0.15em; text-transform:uppercase; font-family:'SF Mono','Fira Code','Consolas',monospace; margin:0;">ARTICLES</h2>
+        <div id="articles-error" class="d-none" style="color:#f87171; font-size:0.8rem;"></div>
+        <div id="articles-grid" class="row g-3"></div>
+      </div>
     </div>
   </section>
 
