fix(T-040-12): articles見出しとカード間隔をdevlogに合わせる

--- a/index.html
+++ b/index.html
@@ -338,6 +338,9 @@
       position: relative;
       width: 100%;
     }
+    #articles-grid {
+      margin-top: 5.5rem;
+    }
     #devlog-gallery-header {
       position: fixed;
       top: 20px;
