refactor(T-040-13a): devlog inline style → CSS分離

--- a/index.html
+++ b/index.html
@@ -338,6 +338,10 @@
       position: relative;
       width: 100%;
     }
+    /* devlog gallery container — ナビバーとの間隔 */
+    #devlog-gallery-container > .container {
+      margin-top: 5.5rem;
+    }
     #articles-grid {
       margin-top: 5.5rem;
     }
