--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <script type="module" src="./src/main.js"></script>
 </head>
 <body>
-  <div id="canvas-container"></div>
+  <div id="canvas-container" aria-hidden="true"></div>
 
   <!-- 左上クレジット -->
   <div id="credit">
