fix(ui): merge duplicate offcanvas class attrs

--- a/index.html
+++ b/index.html
@@ -141,11 +141,10 @@
   </section>
 
   <!-- Bootstrap Offcanvas（右からスライドイン） -->
-  <div class="offcanvas offcanvas-end"
+  <div class="offcanvas offcanvas-end offcanvas-kesson"
        tabindex="-1"
        id="devlogOffcanvas"
-       data-bs-backdrop="true"
-       class="offcanvas-kesson">
+       data-bs-backdrop="true">
     <div class="offcanvas-header border-bottom border-secondary">
       <button type="button" class="btn btn-link text-light p-0 me-2 d-none"
               id="offcanvas-back-btn" aria-label="一覧に戻る">
@@ -178,11 +177,10 @@
   </div>
 
   <!-- Articles Offcanvas -->
-  <div class="offcanvas offcanvas-end"
+  <div class="offcanvas offcanvas-end offcanvas-kesson"
        tabindex="-1"
        id="articlesOffcanvas"
-       data-bs-backdrop="true"
-       class="offcanvas-kesson">
+       data-bs-backdrop="true">
     <div class="offcanvas-header border-bottom border-secondary">
       <div>
         <h5 class="text-light mb-0 offcanvas-title-spaced">ARTICLES</h5>
