refactor: extract page scripts and centralize style tokens

--- a/index.html
+++ b/index.html
@@ -213,178 +213,8 @@
   <!-- CHANGED: aria-label 追加 -->
   <button id="surface-btn" aria-label="ページ上部に戻る">↑ surface</button>
 
-  <!-- ?test パラメータでE2Eテスト自動実行 -->
-  <!-- FIX: eval() → dynamic import() for security/maintainability -->
-  <script type="module">
-    if (new URLSearchParams(window.location.search).has('test')) {
-      // Three.js初期化完了を待ってからテスト実行（3秒待機）
-      window.addEventListener('load', () => {
-        setTimeout(() => {
-          import('./tests/e2e-runner.js').catch(e => {
-            console.error('[E2E] Failed to load test runner:', e);
-          });
-        }, 3000);
-      });
-    }
-  </script>
-
-  <!-- Articles Section Script -->
-  <script type="module">
-  // === Articles Section === // CHANGED(2026-02-16)
-  (async function loadArticles() {
-    const API_URL = 'https://uminomae.github.io/pjdhiro/api/kesson-articles.json';
-    const MOCK_URL = './assets/articles/articles.json';
-    const INITIAL_DISPLAY = 3;
-
-    const grid = document.getElementById('articles-grid');
-    const errorEl = document.getElementById('articles-error');
-    const offcanvasGrid = document.getElementById('offcanvas-articles-grid');
-    const offcanvasCount = document.getElementById('offcanvas-articles-count');
-    const filterGroup = document.getElementById('articles-filter-group');
-    const filterButtons = filterGroup
-      ? Array.from(filterGroup.querySelectorAll('.articles-filter-btn'))
-      : [];
-    if (!grid) return;
-
-    let articles = null;
-    try {
-      const res = await fetch(API_URL);
-      if (res.ok) articles = await res.json();
-    } catch (e) {
-      console.warn('[articles] API unavailable:', e.message);
-    }
-    if (!articles) {
-      try {
-        const res = await fetch(MOCK_URL);
-        if (res.ok) articles = await res.json();
-      } catch (e) {
-        console.error('[articles] Mock also failed:', e.message);
-      }
-    }
-    if (!articles || articles.length === 0) {
-      errorEl.textContent = '記事データの読み込みに失敗しました。';
-      errorEl.classList.remove('d-none');
-      return;
-    }
-
-    articles.sort((a, b) => new Date(b.date) - new Date(a.date));
-    console.log('[articles] total:', articles.length, 'initial:', INITIAL_DISPLAY, 'remaining:', articles.length - INITIAL_DISPLAY);
-
-    function normalizeType(item) {
-      return item.type === 'page' ? 'page' : 'post';
-    }
-
-    function createCard(item, layout) {
-      const col = document.createElement('div');
-      col.className = 'col-12 col-md-6 col-lg-4';
-      const normalizedType = normalizeType(item);
-
-      const dateStr = item.date
-        ? new Date(item.date).toLocaleDateString('ja-JP', {
-            year: 'numeric', month: '2-digit', day: '2-digit'
-          })
-        : '';
-
-      const teaserHtml = item.teaser
-        ? `<img src="${item.teaser}" class="card-img-top" alt=""
-               onerror="this.style.display='none'">`
-        : '';
-
-      const excerptHtml = item.excerpt
-        ? `<p class="card-text">${item.excerpt}</p>`
-        : '';
-
-      col.innerHTML = `
-        <a href="${item.url}" target="_blank" rel="noopener"
-           class="text-decoration-none"
-           aria-label="${item.title} を読む">
-          <div class="card kesson-card h-100">
-            ${teaserHtml}
-            <div class="card-body">
-              <span class="badge bg-secondary mb-2 badge-article-type">
-                ${normalizedType}
-              </span>
-              <h6 class="card-title mb-1">
-                ${item.title}
-              </h6>
-              ${excerptHtml}
-              <small>${dateStr}</small>
-            </div>
-          </div>
-        </a>`;
-
-      return col;
-    }
-
-    const initialItems = articles.slice(0, INITIAL_DISPLAY);
-    initialItems.forEach(item => grid.appendChild(createCard(item, 'grid')));
-    // CHANGED(2026-02-16): 1件以上あれば常にRead Moreを表示
-    const remaining = articles.length - INITIAL_DISPLAY;
-    if (articles.length > 0) {
-      const btnContainer = document.createElement('div');
-      btnContainer.className = 'text-center mt-3';
-
-      const btn = document.createElement('button');
-      btn.className = 'btn-read-more';
-      btn.setAttribute('data-bs-toggle', 'offcanvas');
-      btn.setAttribute('data-bs-target', '#articlesOffcanvas');
-      btn.setAttribute('aria-controls', 'articlesOffcanvas');
-      btn.textContent = remaining > 0
-        ? '▸ Read More (' + remaining + ')'
-        : '▸ View All (' + articles.length + ')';
-
-      btnContainer.appendChild(btn);
-      grid.parentNode.insertBefore(btnContainer, grid.nextSibling);
-    }
-
-    let activeType = 'all';
-
-    function getFilteredArticles(type) {
-      if (type === 'all') return articles;
-      return articles.filter(item => normalizeType(item) === type);
-    }
-
-    function updateFilterButtons() {
-      filterButtons.forEach((btn) => {
-        const isActive = btn.dataset.type === activeType;
-        btn.classList.toggle('is-active', isActive);
-        btn.setAttribute('aria-pressed', isActive ? 'true' : 'false');
-      });
-    }
-
-    function updateOffcanvasCount(filteredCount) {
-      if (!offcanvasCount) return;
-      if (activeType === 'all') {
-        offcanvasCount.textContent = articles.length + ' articles';
-      } else {
-        offcanvasCount.textContent = filteredCount + ' / ' + articles.length + ' articles';
-      }
-    }
-
-    function renderOffcanvasArticles(type) {
-      if (!offcanvasGrid) return;
-      const filtered = getFilteredArticles(type);
-      offcanvasGrid.innerHTML = '';
-      filtered.forEach(item => offcanvasGrid.appendChild(createCard(item, 'offcanvas')));
-      updateOffcanvasCount(filtered.length);
-    }
-
-    filterButtons.forEach((btn) => {
-      btn.addEventListener('click', () => {
-        const nextType = btn.dataset.type || 'all';
-        if (nextType === activeType) return;
-        activeType = nextType;
-        updateFilterButtons();
-        renderOffcanvasArticles(activeType);
-      });
-    });
-
-    if (offcanvasGrid) {
-      updateFilterButtons();
-      renderOffcanvasArticles(activeType);
-    }
-  })();
-  </script>
+  <script type="module" src="./src/pages/e2e-auto-run.js"></script>
+  <script type="module" src="./src/pages/articles-section.js"></script>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
