fix: scrollRestoration を head 内インラインで設定（モジュール実行前に効かせる）

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     gtag('js', new Date());
     gtag('config', 'G-X5WQCB3JYT');
   </script>
+  <!-- FIX: ブラウザのスクロール位置復元を無効化（lang切替リロード時にトップから開始） -->
+  <script>if('scrollRestoration' in history) history.scrollRestoration='manual';</script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>欠損駆動思考 - Kesson Space</title>
